--- a/index.html
+++ b/index.html
@@ -1,2 +1,62 @@
-hey
-nasılsın
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vikings</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+    <!-- start header -->
+   <div id="mainheader">
+    <nav id="glabolnav" class="nav">
+        <div class="globalnav-menu">
+            <div>
+                <element class="nav-bar">
+                    <div><a class="logo" style="margin-top:0; margin-bottom:0;" href="index.html"><img width="60" src="https://i.ebayimg.com/images/g/lFAAAOSwKrhVesK6/s-l1200.jpg" alt="vikings logo"></a></div>
+                    <a href="https://www.netflix.com/title/70301870" target="_blank">Watch</a>
+                    <a href="index.html">Home</a>
+                    <a href="characters.html">Characters</a>
+                    <a href="maps.html">Maps</a>
+                    <a href="https://discord.com/invite/projectdelta" target="_blank">Communities</a>
+                    <a href="">
+                        <img src="" alt="">
+                    </a>
+                </element>
+            </div>
+        </div>
+   </div>
+    <!-- finish header -->
+
+    <!-- start content -->
+    <section>
+        <img width="800" src="https://www.indyturk.com/sites/default/files/article/main_image/2021/01/03/551056-1214388010.jpg" alt=""> <br> <br>
+    </section>
+    <section id="mainpage" class="ft-epik">
+        <article>
+            As the northern winds ruffled the icy seas, the epic tales of the Vikings rose from the cold, harsh lands. These stories recount the bravery of fearless warriors and their yearning for the infinite horizons of the sea. Vikings were the explorers of their time, driven by the desire to pierce the heavens, push boundaries, and embark on journeys to uncharted realms. <br><br>
+
+            At the heart of this saga lies <span><strong>Ragnar Lothbrok</strong></span>. Once a simple farmer, Ragnar transformed into a legendary warrior, his story akin to a fairy tale filled with terrifying dragons, enchanting spells, and epic battles. Ragnar and his loyal comrades set sail across the seas, discovering new lands beyond the known world. These new frontiers were but a fraction of the Vikings' legendary adventures. <br><br>
+
+            Yet, the Vikings were not merely warriors. The series delves into the complexities of Viking society, exploring intricate relationships, love, and betrayal. Amidst the ongoing battles for thrones in the shadow of warfare, families and friendships were tested in the crucible of time. Ragnar's family, in particular, offers captivating stories that rival his heroics. The dynamics within the family add depth to his legendary battles and sea voyages. <br><br>
+
+            "Vikings" unveils this enchanted world, presenting the legendary adventures of the Vikings and their unforgettable characters. With its epic landscapes and emotional depth, the series enchants viewers, transporting them into a realm reminiscent of a fairy tale. The courage of the Vikings and the intricacies of their lives leave an indelible mark, ensuring that "Vikings" remains an unforgettable fairy tale etched into our hearts.  <br><br>          
+        </article>
+       
+
+
+    </section>
+    <!-- finish content -->
+
+    <!-- start footer -->
+    <p class="odin">
+        Descendant of Odin!
+    </p>
+    
+
+    <!-- finish footer -->
+
+</body>
+</html>
